# agent-factory

./: .dockerignore  .gitignore  README.md  pyproject.toml
config/: active.example.yaml  default.yaml
deploy/docker/: Dockerfile  docker-compose.yml
src/: cli.py
src/benchmark/: metrics.py  runner.py  testset_generator.py
src/core/: orchestrator.py
src/core/agent/: generator.py  runtime.py  tools.py
src/core/doc_processor/: chunker.py  converter.py  pipeline.py
src/core/llm/: client.py  local_embedder.py  providers.py
src/core/retrieval/: hybrid_search.py
src/core/vector_store/: memory_store.py  milvus_store.py
src/web/api/: app.py
src/web/frontend/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/web/frontend/frontend/src/: App.css  App.jsx  index.css
src/web/frontend/frontend/src/api/: client.js
src/web/frontend/frontend/src/pages/: AgentManagePage.jsx  AgentPage.jsx  BenchmarkPage.jsx  ChatPage.jsx  ConfigPage.jsx  DocumentsPage.jsx
uploads/: test_doc.md
